Fix sketch-board's overflowing on firefox
- on firefox the sketch-board would overflow. Probably due to some float
precision issue when calculating the width and height of the cell.
- Thus I switched the display mode of the sketch-board from flex to grid
and left calculating the width and height of the cell to the broswer by
using fr units.

--- a/css/style.css
+++ b/css/style.css
@@ -27,13 +27,16 @@ body {
 }
 
 .sketch-board {
-    display: flex;
-    flex-wrap: wrap;
-    flex: 0 0 550px;
+    display: grid;
+    width: 550px;
     height: 550px;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+.sketch-board .cell {
+    background-color: white;
+  }
 
 .settings {
     display: flex;
